<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mailStartGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/mailProfileImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mailStartGuideline"
        app:shapeAppearanceOverlay="@style/RoundImageViewStyle" />

    <TextView
        android:id="@+id/mailNicknameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nickname"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintStart_toEndOf="@id/mailProfileImage"
        app:layout_constraintTop_toBottomOf="@id/mailStartGuideline" />

    <TextView
        android:id="@+id/mailTitleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintStart_toEndOf="@id/mailProfileImage"
        app:layout_constraintTop_toBottomOf="@id/mailNicknameView" />

    <TextView
        android:id="@+id/mailBodyView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/mail_body"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/mailProfileImage"
        app:layout_constraintTop_toBottomOf="@id/mailTitleView" />

</androidx.constraintlayout.widget.ConstraintLayout>