<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mailStartGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mailEndGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mailProfileCardView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mailStartGuideline"
        app:shapeAppearanceOverlay="@style/RoundImageViewStyle">

        <TextView
            android:id="@+id/mailTextProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/mailNicknameView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/nickname"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintEnd_toStartOf="@id/mailEndGuideline"
        app:layout_constraintStart_toEndOf="@id/mailProfileCardView"
        app:layout_constraintTop_toBottomOf="@id/mailStartGuideline" />

    <TextView
        android:id="@+id/mailTitleView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/mail_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintEnd_toStartOf="@id/mailEndGuideline"
        app:layout_constraintStart_toEndOf="@id/mailProfileCardView"
        app:layout_constraintTop_toBottomOf="@id/mailNicknameView" />

    <TextView
        android:id="@+id/mailBodyView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/mail_body"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/mailEndGuideline"
        app:layout_constraintStart_toEndOf="@id/mailProfileCardView"
        app:layout_constraintTop_toBottomOf="@id/mailTitleView" />

</androidx.constraintlayout.widget.ConstraintLayout>